--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -2,6 +2,122 @@
     font-family: "Poppins", sans-serif;
 }
 body, html {
-    height: 100%;
+    height: 900px;
     background: #222222;
+}
+
+.container {
+    font-size: 1.2em;
+    margin-top: 10px;
+    color: #cecece;
+    display: block;
+    position: relative;
+    margin: 40px auto;
+    height: auto;
+    width: 800px;
+}
+.title{
+    color: white;
+    border: 3px solid green;
+    padding: 20px 0;
+    margin-bottom: 50px;
+}
+span{
+    margin: 0 230px;
+}
+.grid {
+    display: flex;
+}
+.btn {
+    padding: .2em 1.7em;
+    border: none;
+    border-radius: .1em;
+    font-size: 1.2em;
+}
+.prev{
+    background: yellow;
+    margin-bottom: 20px;
+}
+.next{
+    background-color: green;
+    margin-left: 550px;
+    margin-bottom: 20px;
+}
+.container ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    overflow: auto;
+}
+.container .questions{
+    padding: 2em;
+}
+.text-light{
+    font-weight: 300;
+    font-size: 1.35em;
+}
+ul li{
+    color: #AAAAAA;
+    display: block;
+    position: relative;
+    float: left;
+    width: 100%;
+    height: 100px;
+    border-bottom: 1px solid #333;
+}
+ul li input[type=radio] {
+    position: absolute;
+    visibility: hidden;
+}
+ul li label{
+    display: block;
+    position: relative;
+    font-weight: 200;
+    font-size: 1.15em;
+    padding: 25px 25px 25px 80px;
+    margin: 10px auto;
+    height: 30px;
+    z-index: 9;
+    cursor: pointer;
+}
+ul li:hover label{
+    color: #FFFFFF;
+}
+ul li .check{
+    display: block;
+    position: absolute;
+    border: 5px solid #AAAAAA;
+    border-radius: 100%;
+    height: 25px;
+    width: 25px;
+    top: 30px;
+    left: 20px;
+    z-index: 5;
+    transition: border .25s linear;
+}
+ul li:hover .checked{
+    border: 5px solid #FFFFFF;
+}
+ul li .check::before{
+    display: block;
+    position: absolute;
+    content: '';
+    border-radius: 100%;
+    height: 15px;
+    width: 15px;
+    top: 5px;
+    left: 5px;
+    margin: auto;
+}
+input[type=radio]:checked ~ .check::before{
+    background: green;
+}
+input[type=radio]:checked ~ .text-promary{
+    color: green;
+}
+.checked{
+    border: 5px solid green;
+}
+.checked::before{
+    background: green;
 }
