--- a/client/src/styles/Main.css
+++ b/client/src/styles/Main.css
@@ -18,7 +18,7 @@ li{
     margin-bottom: 50px;
 }
 span{
-    margin: 0 200px;
+    margin: 50px 230px;
 }
 .start{
     display: flex;
@@ -33,6 +33,9 @@ span{
     color: #202020;
     text-decoration: none;
     background-color: #faff5a;
+}
+.btn:hover {
+    background-color: white;
 }
 #form {
     display: flex;
