--- a/client/src/styles/Results.css
+++ b/client/src/styles/Results.css
@@ -1,25 +1,24 @@
-.result {
+ .result {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     border: 1px solid #cecece;
-    height: 450px;
   }
 
-  .flex{
-    margin-top: 15px;
-    margin-bottom: 15px;
+ .flex{
+    display: flex;
+    flex-direction: row;
   }
   
   .head {
     text-align: left;
     margin: 50px;
+    width: 150px;
   }
   
   .bold {
     align-items: flex-end;
     text-align: right;
-    margin-left: 250px;
     color: yellow;
   }
   
